--- a/index.html
+++ b/index.html
@@ -1,3 +1,30 @@
+<!DOCTYPE html>
 <html>
-<h1>Meu primeiro arquivo no meu primeiro repositório.</h1>
-<//html>
+<head>
+<meta charset="UTF-8">
+<title>Produtos - Barbearia Alura</title>
+<link rel="stylesheet" href="produtos.css">
+</head>
+<body>
+<header>
+<h1><img src="logo.png"></h1>
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="produtos.html">Produtos</a></li>
+<li><a href="contato.html">Contato</a></li>
+</ul>
+</nav>
+</header>
+</body>
+</html>
+<div class="caixa">
+<h1><img src="logo.png"></h1>
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="produtos.html">Produtos</a></li>
+<li><a href="contato.html">Contato</a></li>
+</ul>
+</nav>
+</div>
